[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="organizer"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.1" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.2", features = ["dialog-open"] }
trash="2.0.1"
glob = "0.3.0"
chrono="*"
directories = "3.0.2"
maplit="*"
directory-tree = { git="https://github.com/MAE-BK201/directory-tree.git", branch="MAE-BK201-patch-1" }
[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
